--- a/src/index.css
+++ b/src/index.css
@@ -363,8 +363,8 @@ textarea {
   color: #2cc5d2;
 }
 
-.list-item.TASK_ARCHIVED input[type="text"] {
-  color: #a0aec0;
+.list-item.TASK_ARCHIVED input[type="text"] {  
+  color: #4a5568;
   text-decoration: line-through;
 }
 
